# rouge4llm

./: README.md  pyproject.toml
examples/: llama-3.2-1B.py
src/rouge4llm/: evaluator.py  summarizer.py  utils.py
src/rouge4llm/commands/: run.py
