[project]
name = "rouge4llm"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "nltk>=3.9.1",
    "numpy<2.0",
    "py-rouge>=1.1",
    "rougek>=0.1.5",
    "setuptools>=75.8.0",
    "torch==2.2.2",
    "transformers>=4.48.1",
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "sienna>=0.2.6",
    "aclsum>=0.1.2",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "mypy>=1.11.2",
    "neovim>=0.3.1",
    "pyright>=1.1.383",
    "pytest>=8.3.3",
    "ruff-lsp>=0.0.57",
    "ruff>=0.6.9",
    "pip>=25.0",
]
